add_executable(numdiff test.cpp numdiff_2d.cpp numdiff_1d.cpp numdiff_cart.cpp)
target_link_libraries(numdiff LINK_PUBLIC classtools)
target_link_libraries(numdiff LINK_PUBLIC singleslater)
target_link_libraries(numdiff LINK_PUBLIC grid)
target_link_libraries(numdiff LINK_PUBLIC molecule)
target_link_libraries(numdiff LINK_PUBLIC tools)
target_link_libraries(numdiff LINK_PUBLIC cerr)
target_link_libraries(numdiff LINK_PUBLIC gauinterface)
target_link_libraries(numdiff LINK_PUBLIC controls)
target_link_libraries(numdiff LINK_PUBLIC singleslater)
target_link_libraries(numdiff LINK_PUBLIC aointegrals)
target_link_libraries(numdiff LINK_PUBLIC mointegrals)
target_link_libraries(numdiff LINK_PUBLIC basisset)
target_link_libraries(numdiff LINK_PUBLIC response)
target_link_libraries(numdiff LINK_PUBLIC qn)
target_link_libraries(numdiff LINK_PUBLIC fileio)
target_link_libraries(numdiff LINK_PUBLIC ${EXTERNAL_CQ_DEPS})

