add_executable(playground playground.cxx)
target_link_libraries(playground LINK_PUBLIC classtools)
target_link_libraries(playground LINK_PUBLIC quantum)
target_link_libraries(playground LINK_PUBLIC wavefunction)
target_link_libraries(playground LINK_PUBLIC singleslater)
target_link_libraries(playground LINK_PUBLIC quantum)
#target_link_libraries(playground LINK_PUBLIC grid)
target_link_libraries(playground LINK_PUBLIC grid2)
target_link_libraries(playground LINK_PUBLIC molecule)
target_link_libraries(playground LINK_PUBLIC tools)
target_link_libraries(playground LINK_PUBLIC cerr)
target_link_libraries(playground LINK_PUBLIC gauinterface)
target_link_libraries(playground LINK_PUBLIC controls)
target_link_libraries(playground LINK_PUBLIC quantum)
target_link_libraries(playground LINK_PUBLIC singleslater)
target_link_libraries(playground LINK_PUBLIC quantum)
target_link_libraries(playground LINK_PUBLIC aointegrals)
target_link_libraries(playground LINK_PUBLIC mointegrals)
target_link_libraries(playground LINK_PUBLIC basisset)
#target_link_libraries(playground LINK_PUBLIC response)
target_link_libraries(playground PUBLIC realtime)
target_link_libraries(playground LINK_PUBLIC qn)
target_link_libraries(playground LINK_PUBLIC dft)
target_link_libraries(playground LINK_PUBLIC fileio)
target_link_libraries(playground LINK_PUBLIC ${EXTERNAL_CQ_DEPS})

add_executable(XAStest XAStest.cpp)
target_link_libraries(XAStest LINK_PUBLIC classtools)
target_link_libraries(XAStest LINK_PUBLIC quantum)
target_link_libraries(XAStest LINK_PUBLIC wavefunction)
target_link_libraries(XAStest LINK_PUBLIC singleslater)
target_link_libraries(XAStest LINK_PUBLIC quantum)
target_link_libraries(XAStest LINK_PUBLIC grid2)
target_link_libraries(XAStest LINK_PUBLIC molecule)
target_link_libraries(XAStest LINK_PUBLIC tools)
target_link_libraries(XAStest LINK_PUBLIC cerr)
target_link_libraries(XAStest LINK_PUBLIC gauinterface)
target_link_libraries(XAStest LINK_PUBLIC controls)
target_link_libraries(XAStest LINK_PUBLIC quantum)
target_link_libraries(XAStest LINK_PUBLIC singleslater)
target_link_libraries(XAStest LINK_PUBLIC quantum)
target_link_libraries(XAStest LINK_PUBLIC aointegrals)
target_link_libraries(XAStest LINK_PUBLIC mointegrals)
target_link_libraries(XAStest LINK_PUBLIC basisset)
target_link_libraries(XAStest PUBLIC realtime)
target_link_libraries(XAStest LINK_PUBLIC qn)
target_link_libraries(XAStest LINK_PUBLIC dft)
target_link_libraries(XAStest LINK_PUBLIC fileio)
target_link_libraries(XAStest LINK_PUBLIC ${EXTERNAL_CQ_DEPS})

#add_executable(myTest myTest.cpp)
#target_link_libraries(myTest LINK_PUBLIC classtools)
#target_link_libraries(myTest LINK_PUBLIC singleslater)
#target_link_libraries(myTest LINK_PUBLIC grid)
#target_link_libraries(myTest LINK_PUBLIC grid2)
#target_link_libraries(myTest LINK_PUBLIC molecule)
#target_link_libraries(myTest LINK_PUBLIC tools)
#target_link_libraries(myTest LINK_PUBLIC cerr)
#target_link_libraries(myTest LINK_PUBLIC gauinterface)
#target_link_libraries(myTest LINK_PUBLIC controls)
#target_link_libraries(myTest LINK_PUBLIC singleslater)
#target_link_libraries(myTest LINK_PUBLIC aointegrals)
#target_link_libraries(myTest LINK_PUBLIC mointegrals)
#target_link_libraries(myTest LINK_PUBLIC basisset)
#target_link_libraries(myTest LINK_PUBLIC response)
#target_link_libraries(myTest LINK_PUBLIC qn)
#target_link_libraries(myTest LINK_PUBLIC dft)
#target_link_libraries(myTest LINK_PUBLIC quantum)
#target_link_libraries(myTest LINK_PUBLIC fileio)
#target_link_libraries(myTest LINK_PUBLIC ${EXTERNAL_CQ_DEPS})

