add_library(singleslater SHARED singleslater_real_fock.cpp singleslater_real_guess.cpp 
singleslater_real_mpi.cpp singleslater_real_properties.cpp singleslater_real_scf.cpp 
singleslater_real_misc.cpp singleslater_real_diis.cpp singleslater_complex_misc.cpp 
singleslater_complex_guess.cpp singleslater_complex_diis.cpp singleslater_complex_scf.cpp
singleslater_complex_properties.cpp singleslater_real_print.cpp singleslater_complex_print.cpp
singleslater_real_dft.cpp singleslater_complex_dft.cpp)
